--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -102,7 +102,7 @@
       <div class="header">
 
         {% block logo %}
-        <div class="logo">
+        <div class="logo hidden-xs">
           <a href="{% if last_instance %}{% url 'map' instance_url_name=last_instance.url_name %}{% else %}/{% endif %}"
             ><img id="site-logo" src="{{ logo_url }}" alt="OpenTreeMap">
           </a>
