Hide the stats/export bar on small screens
Exporting doesn't make much sense on a phone, and the add tree button
can be accessed from the "+" in the top-left.

Losing the tree/plot counts isn't great, but we need the real estate

--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -43,6 +43,10 @@ body {
         @media(min-width: 990px){
             top: 205px;
         }
+
+        @media(max-width: 768px){
+            top: 164px;
+        }
 	}
 }
 
