--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -17,6 +17,10 @@
         margin-top: 42px;
     }
 
+    @media(max-width: 767px){
+        margin-top: 0;
+    }
+
     &.expanded {
         -ms-transform: translateY(0);
         -moz-transform: translateY(0);
