--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -122,7 +122,7 @@
 
   {% include "udfc_search.html" %}
 
-  <div class="stats-bar">
+  <div class="stats-bar hidden-xs">
     <div class="half">
       <div style="display: inline;" id="tree-and-planting-site-counts">
       </div>
