--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -14,6 +14,10 @@
     font-weight: 700;
     color: #AAA;
     box-shadow: 0 2px 6px rgba(0,0,0,.5);
+
+    @media(max-width: 768px){
+        display: none !important;
+    }
 }
 
 #streetview img {
