Hide stewardship search on small screens.
Unfortunately, there is just no way to fit this.

--- a/opentreemap/treemap/templates/udfc_search.html
+++ b/opentreemap/treemap/templates/udfc_search.html
@@ -14,7 +14,7 @@
 
 {% if t_stew_allowed or p_stew_allowed or t_alerts_allowed or p_alerts_allowed %}
 
-<div class="udfc-search clearfix">
+<div class="udfc-search clearfix hidden-xs">
   <span>{% trans "I am looking for" %}</span>
   <label class="udfc-label">
     <select id="udfc-search-model">
