Place login/signup/logout/profile into dropdown on small screens

--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -162,6 +162,9 @@
         border: 1px solid rgba(0, 0, 0, 0.15);
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
     }
+    .dropdown-pull-left {
+        left: -380%
+    }
 }
 
 .user-dock {
