Redo navbar changes to remove inline-flex

--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -142,17 +142,14 @@
     .navbar {
         margin: 0;
 
-        .nav {
-            display: inline-flex;
 
-            .li {
+        .navbar-collapse {
+            display: inherit;
+
+            .nav > li {
                 display: inline-block;
             }
         }
-    }
-
-    .navbar-collapse {
-        display: inherit;
     }
     .navbar-nav .open .dropdown-menu {
         position: absolute;
