--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -15,7 +15,7 @@
     color: #AAA;
     box-shadow: 0 2px 6px rgba(0,0,0,.5);
 
-    @media(max-width: 768px){
+    @media #{$screen-xs} {
         display: none !important;
     }
 }
@@ -33,7 +33,7 @@
     top: 0;
     right: 350px;
 
-    @media(max-width: 768px){
+    @media #{$screen-xs} {
         right: 0;
     }
 }
