--- a/opentreemap/importer/templates/importer/partials/status_table.html
+++ b/opentreemap/importer/templates/importer/partials/status_table.html
@@ -15,7 +15,11 @@
                     <tr class="js-import-row">
                         {% for field in row.fields %}
                             {% if field.show_resolver %}
-                                {% include "importer/partials/resolve_popover.html" %}
+                                {% if field.custom_resolver.is_species %}
+                                    {% include "importer/partials/species_resolve_popover.html" %}
+                                {% else %}
+                                    {% include "importer/partials/resolve_popover.html" %}
+                                {% endif %}
                             {% else %}
                                 <td class="{{ field.css_class }}" data-field-name="{{ field.name }}">{{ field.value }}</td>
                             {% endif %}
