Styled Import Status Page

--- a/opentreemap/importer/templates/importer/partials/status.html
+++ b/opentreemap/importer/templates/importer/partials/status.html
@@ -7,8 +7,13 @@
         <div>
           <div class="row">
             <div class="col-md-12">
-              <h2>{% trans "Import Status" %}</h2>
+              <h1>{% trans "Import Status" %}</h1>
               <hr>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="col-md-12 well">
               {% block main %}
               {% endblock main %}
             </div>
