--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -38,4 +38,9 @@
     .btn-info{
       margin-right: 12px;
     }
+
+    .no-bullet{
+      list-style-type: none;
+      padding-left: 0!important;
+    }
 }
