--- a/opentreemap/importer/templates/importer/partials/file_status.html
+++ b/opentreemap/importer/templates/importer/partials/file_status.html
@@ -2,18 +2,18 @@
 {% load i18n %}
 
 {% block main %}
-<h1> There were errors reading the file structure: </h1>
+<h4> There were errors reading the file structure: </h4>
 
 {% with errors=ie.errors_as_array %}
   {% if errors %}
-    <ul>
+    <ul class="no-bullet">
       {% for error in errors %}
         {% if error.data %}
           <li>{{ error.msg }}:
             <ul>
               {% for item in error.data %}
                 {% if item %}
-                  <li>{{ item }}</li>
+                  <li><b>{{ item }}</b></li>
                 {% endif %}
               {% endfor %}
             </ul>
