--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -12,6 +12,10 @@
         padding-top: 50px;
     }
 
+  .table{
+    background-color: transparent;
+  }
+
    td.error {
         background-color: #f2dede;
    }
