Styled Popup and table-hover

--- a/opentreemap/importer/templates/importer/partials/resolve_popover.html
+++ b/opentreemap/importer/templates/importer/partials/resolve_popover.html
@@ -5,7 +5,7 @@
 
 {% block content_text %}
 <p>There was an error with this field:</p>
-<p>{{ field.msg }}</p>
+<ul><li><b>{{ field.msg }}</b></li></ul>
 <p>Please provide a new value:</p>
 {% endblock content_text %}
 
