--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -14,6 +14,16 @@
 
   .table{
     background-color: transparent;
+
+    .no-rows{
+      padding: 8px 12px;
+    }
+  }
+
+  .table-hover{
+    tr{
+      cursor: pointer;
+    }
   }
 
    td.error {
