Improve importer's file loading
* Add new `LOADING` status for import events
* Show running count as rows are loaded
* Bulk create blocks of row objects (and remove subclass-specific `create_row`)
* Remove `transaction.atomic` on `tasks._create_rows_for_event` and remove rows manually if csv load fails

Also, refactor and simplify file-level validation
* Only `tasks._create_rows_for_event` deals with file-level validation
* Don't read rows if header has errors
* Move "empty file" check from `validate_main_file` to `tasks._create_rows_for_event`
* Rename `validate_main_file` to `validate_field_names`
* Subclasses now override `legal_and_required_fields()` instead of `validate_main_file`

Other refactoring and cleanup
* Add `GenericImportEvent.row_count` property
* Remove unused field `GenericImportEvent.committed`

--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -14,9 +14,11 @@
             <td>{{ ie.status_summary }}</td>
             <td>
                 {% if ie.is_finished %}
-                    {{ ie.rows.count }}
+                    {{ ie.row_count }}
+                {% elif ie.is_loading %}
+                    {{ ie.row_count }}
                 {% elif ie.is_running %}
-                    {{ ie.completed_row_count }} / {{ ie.rows.count }}
+                    {{ ie.completed_row_count }} / {{ ie.row_count }}
                 {% endif %}
             </td>
             <td>
