Add typeahead species resolver

--- a/opentreemap/importer/templates/importer/partials/species_resolve_popover.html
+++ b/opentreemap/importer/templates/importer/partials/species_resolve_popover.html
@@ -3,14 +3,17 @@
 
 {% block title %}Could not find matching species{% endblock title %}
 
-{% block content_text %}
+{% block content %}
 <p>That species couldn't be found in the database</p>
 <p>Did you mean: "{{ field.custom_resolver.suggestion.display_name }}"?</p>
-{% endblock content_text %}
-{% block extra_content_input_attributes %}
-type="hidden"
-value="{{ field.custom_resolver.suggestion.pk|unlocalize }}"
-{% endblock extra_content_input_attributes %}
+<input type="hidden"
+       data-typeahead-hidden="true"
+       class="species-resolver-typeahead-hidden popover-correction"
+       value="{{ field.custom_resolver.suggestion.pk|unlocalize }}"/>
+<input class="popover-correction species-resolver-typeahead"
+       data-typeahead-url="{% url 'species_list_view' instance_url_name=request.instance %}"
+       value="{{ field.custom_resolver.suggestion.display_name }}"/>
+{% endblock content %}
 
 {% block extra_save_classes %}resolver-popover-accept{% endblock extra_save_classes %}
 
