Make error-correction popup scroll along with its table cell

--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -28,10 +28,12 @@
 
    td.error {
         background-color: #f2dede;
+        position: relative;
    }
 
    td.warning {
         background-color: #fef4ad;
+        position: relative;
    }
 
    input {
