Improve wording of error messages

--- a/opentreemap/importer/templates/importer/partials/file_status.html
+++ b/opentreemap/importer/templates/importer/partials/file_status.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 <div class="well">
-  <h4> There were errors reading the file structure: </h4>
+  <h4>There were errors in the file structure: </h4>
 
   {% with errors=ie.errors_as_array %}
     {% if errors %}
